@@ -1,17 +1,19 @@
 DOWNLOADS = \
-	http://ftp.gnome.org/pub/GNOME/sources/pango/1.2/pango-1.2.3.tar.gz          \
-	http://ftp.gnome.org/pub/GNOME/sources/atk/1.2/atk-1.2.4.tar.gz          \
-	http://ftp.gnome.org/pub/GNOME/sources/gtk+/2.2/gtk+-2.2.2.tar.gz          \
-	http://ftp.gnome.org/pub/GNOME/desktop/2.0/2.0.0/sources/libgnome-2.0.1.tar.gz       \
-	http://ftp.gnome.org/pub/GNOME/desktop/2.0/2.0.0/sources/libgnomecanvas-2.0.1.tar.gz \
-	http://ftp.gnome.org/pub/GNOME/desktop/2.0/2.0.0/sources/libgnomeui-2.0.1.tar.gz     \
-	http://ftp.gnome.org/pub/GNOME/desktop/2.0/2.0.0/sources/libglade-2.0.0.tar.gz       \
-	http://ftp.gnome.org/pub/GNOME/desktop/2.0/2.0.3/sources/libart_lgpl-2.3.10.tar.gz   \
-	ftp://ftp.gnome-db.org/pub/gnome-db/sources/v0.90.0/libgda-0.90.0.tar.gz             \
-	ftp://ftp.gnome-db.org/pub/gnome-db/sources/v0.90.0/libgnomedb-0.90.0.tar.gz         \
-	ftp://unc.dl.sourceforge.net/sourceforge/gstreamer/gstreamer-0.4.2.tar.gz           \
-	http://ftp.gnome.org/pub/GNOME/sources/gstreamer/0.4/gstreamer-0.4.2.tar.gz          \
-	http://ftp.gnome.org/pub/gnome/sources/librsvg/2.0/librsvg-2.0.1.tar.gz              \
+	http://ftp.gnome.org/pub/GNOME/sources/pango/1.2/pango-1.2.3.tar.gz          		\
+	http://ftp.gnome.org/pub/GNOME/sources/atk/1.2/atk-1.2.4.tar.gz          		\
+	http://ftp.gnome.org/pub/GNOME/sources/gtk+/2.2/gtk+-2.2.2.tar.gz          		\
+	http://ftp.gnome.org/pub/GNOME/desktop/2.0/2.0.0/sources/libgnome-2.0.1.tar.gz       	\
+	http://ftp.gnome.org/pub/GNOME/desktop/2.0/2.0.0/sources/libgnomecanvas-2.0.1.tar.gz 	\
+	http://ftp.gnome.org/pub/GNOME/desktop/2.0/2.0.0/sources/libgnomeui-2.0.1.tar.gz     	\
+	http://ftp.gnome.org/pub/GNOME/desktop/2.2/2.2.2/sources/libgnomeprint-2.2.1.3.tar.gz	\
+	http://ftp.gnome.org/pub/GNOME/desktop/2.2/2.2.2/sources/libgnomeprintui-2.2.1.3.tar.gz	\
+	http://ftp.gnome.org/pub/GNOME/desktop/2.0/2.0.0/sources/libglade-2.0.0.tar.gz       	\
+	http://ftp.gnome.org/pub/GNOME/desktop/2.0/2.0.3/sources/libart_lgpl-2.3.10.tar.gz   	\
+	ftp://ftp.gnome-db.org/pub/gnome-db/sources/v0.90.0/libgda-0.90.0.tar.gz             	\
+	ftp://ftp.gnome-db.org/pub/gnome-db/sources/v0.90.0/libgnomedb-0.90.0.tar.gz         	\
+	ftp://unc.dl.sourceforge.net/sourceforge/gstreamer/gstreamer-0.4.2.tar.gz           	\
+	http://ftp.gnome.org/pub/GNOME/sources/gstreamer/0.4/gstreamer-0.4.2.tar.gz          	\
+	http://ftp.gnome.org/pub/gnome/sources/librsvg/2.0/librsvg-2.0.1.tar.gz              	\
 
 GTKHTML_SOURCES = \
         gtkhtml-3.0.8/src/gtkhtml.c \
