@@ -1,3 +1,9 @@
+2003-08-13  Martin Willemoes Hansen  <mwh@sysrq.dk>
+
+	* sources/makefile: 
+	* sources/gtk-sharp.sources: Added libgnomeprint-2.2.2 and
+	libgnomeprintui-2.2.2
+
 2003-08-08  Mike Kestner  <mkestner@ximian.com>
 
 	* sources/gtk-sharp.sources : point to gtkhtml-3.0.8 dir
